SCHOOL: moves with mouse now

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Walking Bacteria</h1>
+			<h1>Bacterial Growth</h1>
 		</header>
 			<section id="content">
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Don't touch them!
+		    Don't touch it
 	    </footer>
 	</body>
 </html>
